RbA Build/src/objects/Store_Configuration__c.object
<CustomObject>
    <description>Holds Store Settings &amp; Configurations</description>
    <fields>
        <fullName>AR_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person responsible for Accounts Recievable</description>
        <inlineHelpText>Choose the user responsible for Accounts Recievable</inlineHelpText>
        <label>Accounts Receivable Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Store_Configurations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accounts_Receivable_Contact_Title__c</fullName>
        <description>Title of the Accounts Receivable Coordinator</description>
        <formula>AR_Coordinator__r.Title</formula>
        <inlineHelpText>Title of the Accounts Receivable Coordinator</inlineHelpText>
        <label>Accounts Receivable Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounts_Receivable_Contact__c</fullName>
        <description>First and Last name of the Accounts Receivable Coordinator</description>
        <formula>AR_Coordinator__r.FirstName &amp; &apos; &apos; &amp;  AR_Coordinator__r.LastName</formula>
        <inlineHelpText>First and Last name of the Accounts Receivable Coordinator</inlineHelpText>
        <label>Accounts Receivable Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounts_Receivable_Phone__c</fullName>
        <description>Accounts Receivable Phone number</description>
        <inlineHelpText>Enter Accounts Receivable Phone number</inlineHelpText>
        <label>Accounts Receivable Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Backdown_Use_Tax_Margin__c</fullName>
        <description>The Backdown Use Tax Margin</description>
        <inlineHelpText>Backdown Use Tax Margin</inlineHelpText>
        <label>Backdown Use Tax Margin</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Building_Permit_Work_Order_Queue_Id__c</fullName>
        <label>Building Permit Work Order Queue Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_LIcense_2__c</fullName>
        <label>Contractor LIcense 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_License_1__c</fullName>
        <label>Contractor License 1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA__c</fullName>
        <description>&quot;Doing Business As&quot;</description>
        <inlineHelpText>&quot;Doing Business As&quot;</inlineHelpText>
        <label>DBA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Install_Track_Location__c</fullName>
        <description>The default inside track location the store wants to use within the product configuration&apos;s special options.</description>
        <inlineHelpText>The default inside track location the store wants to use within the product configuration&apos;s special options.</inlineHelpText>
        <label>Default Install Track Location</label>
        <picklist>
            <picklistValues>
                <fullName>Inside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Center</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HOA_Work_Order_Queue_Id__c</fullName>
        <label>HOA Work Order Queue Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Historical_Work_Order_Queue_Id__c</fullName>
        <label>Historical Work Order Queue Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Work_Order_Queue_Id__c</fullName>
        <label>Install Work Order Queue Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Location_Address__c</fullName>
        <label>Invoice Location Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Location_City__c</fullName>
        <label>Invoice Location City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Location_State__c</fullName>
        <description>Enter the full state name (not the abbreviation). This is due to a workflow that is populating the Billing/Shipping State on the store account.</description>
        <inlineHelpText>Enter the full state name (not the abbreviation).</inlineHelpText>
        <label>Invoice Location State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Location_Zip__c</fullName>
        <label>Invoice Location Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Notes_or_Comments__c</fullName>
        <label>Invoice Notes or Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LSWP_WO_Owner_ID__c</fullName>
        <inlineHelpText>Who will be the default owner of LSWP Work Order.  Can be a User or a Queue.  Please put in the ID of the User or Queue.</inlineHelpText>
        <label>LSWP WO Queue ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lien_County__c</fullName>
        <label>Lien County</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lien_State__c</fullName>
        <label>Lien State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_Number__c</fullName>
        <description>Enter the location number for this store.</description>
        <inlineHelpText>Enter the location number for this store.</inlineHelpText>
        <label>Location Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Store_Configurations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Material_Multiplier__c</fullName>
        <description>JETT-2155 Used for Job costing reporting.</description>
        <label>Material Multiplier</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>7</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Queue_Id__c</fullName>
        <label>Order Queue Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paint_Stain_Vendor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Default Paint / Stain Vendor Account</inlineHelpText>
        <label>Paint / Stain Vendor Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Store Configurations (Paint / Stain Vendor Account)</relationshipLabel>
        <relationshipName>Store_Configurations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paint_Stain_Vendor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Default Paint / Stain Vendor Contact</inlineHelpText>
        <label>Paint / Stain Vendor Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Vendor Contacts</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Store Configurations (Paint / Stain Vendor Contact)</relationshipLabel>
        <relationshipName>Store_Configurations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paint_Stain_Work_Order_Queue_ID__c</fullName>
        <label>Paint/Stain Work Order Queue ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Remit_to_Address__c</fullName>
        <label>Remit to Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remit_to_City__c</fullName>
        <label>Remit to City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remit_to_Company_Name__c</fullName>
        <label>Remit to Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remit_to_State__c</fullName>
        <label>Remit to State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remit_to_Zip__c</fullName>
        <label>Remit to Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <inlineHelpText>Add default sales tax amount for this store</inlineHelpText>
        <label>Sales Tax</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service_Material_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>default Service Material Owner for this store. Drives assignments on adding Service Tasks to Service Work Orders</inlineHelpText>
        <label>Service Material Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Store_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Phone__c</fullName>
        <label>Service Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Service_Work_Order_Queue_ID__c</fullName>
        <label>Service Work Order Queue ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Hourly_Rate__c</fullName>
        <inlineHelpText>Standard Hourly Rate used for Labor</inlineHelpText>
        <label>Standard Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Store_Abbreviation__c</fullName>
        <description>The one letter abbreviation for the store, used within PO numbers.</description>
        <inlineHelpText>The one letter abbreviation for the store, used within PO numbers.</inlineHelpText>
        <label>Store Abbreviation</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <label>Store</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Store Configurations</relationshipLabel>
        <relationshipName>Store_Configurations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tech_Measure_Work_Order_Queue_Id__c</fullName>
        <label>Tech Measure Work Order Queue Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rSuite_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>rSuite Configuration</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>rSuite_Configuration__c.Store_Configuration__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rSuite_Configuration__c</referenceTo>
        <relationshipLabel>Store Configurations</relationshipLabel>
        <relationshipName>Store_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Store Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Store__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SS-{00}</displayFormat>
        <label>Store Setting Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>